tests/output/self_hosted/double_minus_suffix_error.txt
tests/double_minus_suffix_error.oomph:3: error: should be an expression

    print(thing--)
                 ^

